--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'baskerville', sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: #f1ecec;
     color: #333;
 }
